--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,8 @@ dependencies:
     sdk: flutter
 
   google_maps_flutter: ^0.5.21
-  http: ^0.12.0+2
-  flutter_datetime_picker: ^1.2.5
+  http: ^0.12.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
